--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -6,7 +6,8 @@
     Welcom to Teleschocken
 {% endblock %}
 {% block navbar %}
-    <div class="row" style="height:60px;">
+    <div class="row">
+        <h3>Tele-Schocken Beta</h3>
     </div>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/dice.css') }}">
