--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -6,8 +6,11 @@
     Welcom to Teleschocken
 {% endblock %}
 {% block navbar %}
-    <div class="row">
+    <div class="row col-md-offset-1">
+      <div class="col-md-4">
         <h3>Tele-Schocken Beta</h3>
+      </div>
+
     </div>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/dice.css') }}">
