--- a/backend/app/templates/game.html
+++ b/backend/app/templates/game.html
@@ -92,9 +92,9 @@
     if (id == admin_id){
       var button = document.getElementById('startgame_id');
       button.disabled = false;
-      setdamin.innerHTML = 'Sie sind Admin Spiel Bitte Starten wenn alle Spieler in der Liste stehen'
+      setdamin.innerHTML = 'Sie sind Admin. Bitte starten wenn alle Spieler in der Liste stehen'
     }else{
-      setdamin.innerHTML = 'Sie sind Spieler warten Sie bis der Admin das Spiel gestartet hat'
+      setdamin.innerHTML = 'Sie sind Spieler. Bitte warten Sie bis der Admin das Spiel gestartet hat'
     }
     window.setInterval(function(){
       /// call your function here
@@ -116,7 +116,7 @@
       }
       xhttp.send(JSON.stringify({}));
 
-    }, 5000);
+    }, 3000);
   }
 
   startup();
