--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -153,13 +153,17 @@
       <label for="stack_cb">Von Stapel:</label>
       <input type="checkbox" id="stack_cb" name="stack" value="False" checked>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-1">
+      <label for="schockaus_cb">Schockaus</label>
+      <input type="checkbox" id="schockaus_cb" name="schockaus" value="False" checked>
+    </div>
+    <div class="col-md-1">
       <label for="transfer_source">Von:</label>
       <select id="transfer_source" name="count">
         <option value=""></option>
       </select>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-1">
       <label for="transfer_target">An:</label>
       <select id="transfer_target" name="count">
         <option value=""></option>
@@ -464,6 +468,7 @@
 
     var count = document.getElementById('stack_count_id').value;
     var stack = document.getElementById('stack_cb').checked;
+    var aus = document.getElementById('schockaus_cb').checked;
     var transfer_source = document.getElementById('transfer_source');
     var source = transfer_source.options[transfer_source.selectedIndex].value;
     var transfer_target = document.getElementById('transfer_target');
@@ -482,6 +487,9 @@
     }
     if (stack){
       xhttp.send(JSON.stringify({count:parseInt(count), stack:stack, target:parseInt(target)}));
+    }
+    if (aus){
+      xhttp.send(JSON.stringify({schockaus:aus, target:parseInt(target)}));
     }else{
       xhttp.send(JSON.stringify({count:parseInt(count), source:parseInt(source), target:parseInt(target)}));
     }
