--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -62,7 +62,7 @@
           <li>Zu jeden Zeitpunkt kann auf bzw zu gedeckt werden.</li>
           <li>Rausgestellte Würfel sind aufgedeckt</li>
           <li>Der Spieler der bei einer Runde bereits gewonnen hat (0 Chps), muss jedes Mal auf "Ende" klicken wenn er dran wäre (ermöglicht wieder Einwerfen)</li>
-          <li>Der Code ist frei verfügbar. Wenn euch das Spiel gefällt liked es auf Github. Wenn ihr Anregungen habt oder Fehler findet melden auch via Github</li>
+          <li>Der Code ist frei verfügbar. Wenn euch das Spiel gefällt liked es auf Github. Wenn ihr Anregungen habt oder Fehler findet meldet dies auch via Github</li>
         </ul>
       </div>
       <div class="row">
