adjust impressum and ui

--- a/backend/app/static/styles/style.css
+++ b/backend/app/static/styles/style.css
@@ -11,6 +11,12 @@ table {
     counter-increment: tableCount;
 }
 
+footer {
+    clear: both;
+    position: relative;
+    height: 200px;
+    margin-top: -200px;
+}
 
 .header-img {
   width: 100%;
