--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -26,23 +26,28 @@
 {% endblock %}
 
 {% block footer %}
-<div class="row" style="height:250px;">
-</div>
-<div class="row">
-  <hr>
-</div>
-<div class="row col-md-offset-1">
-  <div class="col-md-3">
-    <p>Github: <a href="https://github.com/Skill3t/Tele-Schocken">
-    Tele-Schocken</a></p>
+
+<footer>
+  <div class="row" style="height:250px;">
   </div>
-  <div class="col-md-3">
-    <a href="{{ url_for('static',filename='datenschutz.html') }}"">
-    Impressum</a>
+  <div class="row">
+    <hr>
   </div>
-  <div class="col-md-3">
-    <a href= "{{ url_for('static',filename='datenschutz.html') }}"">
-    Datenschutz</a>
+  <div class="row col-md-offset-1">
+    <div class="col-md-3">
+      <p>Github: <a href="https://github.com/Skill3t/Tele-Schocken">
+      Tele-Schocken</a></p>
+    </div>
+    <div class="col-md-3">
+      <a href="{{ url_for('static',filename='impressum.html') }}"">
+      Impressum</a>
+    </div>
+    <div class="col-md-3">
+      <a href= "{{ url_for('static',filename='datenschutz.html') }}"">
+      Datenschutz</a>
+    </div>
   </div>
-</div>
+</footer>
+
+
 {% endblock %}
